# Raccly

./: Dockerfile  OWL_PROMPTS_GUIDE.md  README.md  custom_types.py  data_loader.py  dowloader.py  main.py  package-lock.json  package.json  pyproject.toml  railway.json  vector_db.py
.claude/: settings.local.json
app/: ingest_pdfs.py  main.py  vector_db.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
backend/.claude/: settings.local.json
backend/.github/workflow/: deploy.yml
backend/app/: config.py  main.py  models.py  sessions.py  vector_db.py
backend/app/rag/: context.py  retrieval.py  sources.py
backend/app/routes/: query.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/chat/: page.tsx
src/app/compare/: page.tsx
src/app/explore/: page.tsx
src/app/graphs/: page.tsx
src/app/logo-showcase/: page.tsx
src/app/map/: page.tsx
src/app/network/: page.tsx
src/app/review/: page.tsx
src/app/table/: page.tsx
src/app/timeline/: page.tsx
src/app/workspace/: page.tsx
src/features/chat/: index.ts
src/features/papers/: index.ts
src/graph/: Reporte_Front_Grafo.txt  Visualizador_Grafo.html  edges.csv  grafo_papers_autores.html  graph_with_links.json  metadata_papers.json  nodes.csv
src/shared/components/: AnimatedLogo.tsx  ConditionalLayout.tsx  MemoraLabLogo.tsx  Sidebar.tsx  TopNav.tsx
src/shared/contexts/: ResearchContext.tsx
(+60 files in other folders)
